# chainweb-miner

./: .gitignore  CHANGELOG.md  README.org  cabal.project  chainweb-miner.cabal  default.nix  kernel.cl  stack.yaml
.github/workflows/: build-application.yml  pr-build.yml  stack-ci.yaml
dep/kpkgs/: github.json
exec/: BalanceChecker.hs  Miner.hs  Utils.hs
exec/Miner/: Balance.hs  BalanceChecker.hs  OpenCL.hs  Types.hs  Updates.hs
