cabal-version: 2.2

name:          chainweb-miner
version:       1.0.2
description:   Official mining software for the Kadena Public Blockchain.
homepage:      https://github.com/kadena-io/chainweb-miner
author:        Kadena Developers
maintainer:    colin@kadena.io
copyright:     2019 Kadena LLC
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

extra-source-files:
  README.org
  CHANGELOG.md

common commons
  default-language: Haskell2010
  build-depends: base >= 4.12 && < 5
  ghc-options:
    -Wall
    -Wcompat
    -Wpartial-fields
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Widentities
    -funclutter-valid-hole-fits
    -fmax-relevant-binds=0

executable chainweb-miner
  import: commons
  hs-source-dirs: exec
  main-is: Miner.hs
  other-modules:
      Miner.Balance
      Miner.Types
      Miner.Updates
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      bytestring >= 0.10
    , Decimal >= 0.4.2
    , aeson >= 1.4.3
    , chainweb >= 1.0
    , connection >= 0.2
    , dlist >= 0.8
    , semigroupoids >= 5
    , generic-lens >= 1.2
    , http-client >= 0.6
    , http-client-tls >= 0.3
    , http-types >= 0.12
    , mwc-random >= 0.14
    , optparse-applicative >= 0.14
    , pact >= 3.3
    , paths >= 0.2
    , retry >= 0.8
    , rio >= 0.1.12
    , scheduler >= 1.4.2
    , servant-client >= 0.16
    , streaming >= 0.2
    , streaming-events >= 1.0
    , strict-tuple >= 0.1.3
    , these >= 1 && < 1.1
    , time >= 1.8
    , wai-extra >= 3.0
